--- a/assets/README.html
+++ b/assets/README.html
@@ -1,13 +1,11 @@
-const readmeContent = `
 # ephemeraUI
 
-A web application for uploading images, pinning them to IPFS, and performing emotion detection (planned).
+A web application for uploading images and performing operations to analyze them.
 
 ## Usage
 
-1. Enter your Pinata API key in the provided input field and click "Set Credentials".
-2. Select one or more image files to upload using the file input.
-3. The application will automatically upload the files to Pinata and display their thumbnails, names, and CIDs.
-4. Click the "Pin CIDs to IPFS" button to pin the obtained CIDs to the IPFS gateway.
-5. (Planned) View emotion detection results for the uploaded images.
+1. Select one or more image files to upload using the file input.
+2. The application will automatically upload the files and display their thumbnails and names.
+3. (Planned) Pin the uploaded images to IPFS.
+4. (Planned) View emotion detection results for the uploaded images.
 `;
